clusters/9ka/monitoring/networkpolicies/alertmanager-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: alertmanager
      app.kubernetes.io/name: alertmanager
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: http-web
        protocol: TCP
  egress:
  - toFQDNs:
    - matchName: api.pushover.net
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
