clusters/9ka/monitoring/networkpolicies/grafana-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/name: grafana
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: grafana
        protocol: TCP
  egress:
  - toFQDNs:
    - matchName: grafana.com
    - matchName: storage.googleapis.com
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
