clusters/9ka/monitoring/networkpolicies/grafana-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  policyTypes:
  - Egress
  - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/name: grafana
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: grafana
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: grafana
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: influxdb
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: influxdb
          app.kubernetes.io/name: influxdb
    ports:
    - protocol: TCP
      port: api
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 9090
