clusters/9ka/monitoring/networkpolicies/node-exporter-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-exporters
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: prometheus-node-exporter
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: http-metrics
        protocol: TCP
