clusters/9ka/monitoring/networkpolicies/prometheus-external-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-external
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: prometheus
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6942"
        protocol: TCP
      - port: "9090"
        protocol: TCP
      - port: "2381"
        protocol: TCP
      - port: "10250"
        protocol: TCP
