clusters/9ka/monitoring/networkpolicies/prometheus-internal-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-internal
  namespace: monitoring
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: prometheus
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: web
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: kube-prometheus-stack
          app.kubernetes.io/name: grafana
    ports:
    - protocol: TCP
      port: 9090
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: dns
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cert-manager
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: cert-manager
    ports:
    - protocol: TCP
      port: 9402
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 10254
  - to:
    - podSelector:
        matchLabels:
          alertmanager: alertmanager
          app.kubernetes.io/instance: alertmanager
          app.kubernetes.io/name: alertmanager
    ports:
    - protocol: TCP
      port: 9093
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: kube-prometheus-stack
          app.kubernetes.io/name: grafana
    ports:
    - protocol: TCP
      port: grafana
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: kube-prometheus-stack
          app.kubernetes.io/name: kube-state-metrics
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app: prometheus-node-exporter
    ports:
    - protocol: TCP
      port: 9100
  - to:
    - podSelector:
        matchLabels:
          app: kube-prometheus-stack-operator
          app.kubernetes.io/instance: kube-prometheus-stack
          app.kubernetes.io/part-of: kube-prometheus-stack
    ports:
    - protocol: TCP
      port: 10250
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: velero
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: velero
          app.kubernetes.io/name: velero
          name: velero
    ports:
    - protocol: TCP
      port: http-monitoring
